[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/Rakugo/tools/SceneLinks/SceneLinkEdit.gd" type="Script" id=1]
[ext_resource path="res://addons/material-design-icons/fonts/material_design_icons.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/material-design-icons/nodes/MaterialButton.gd" type="Script" id=3]
[ext_resource path="res://addons/material-design-icons/nodes/MaterialIcon.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[node name="SceneLinkEdit" type="HBoxContainer"]
margin_right = 501.0
margin_bottom = 30.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_rect = Rect2( 0, 3, 200, 100 )

[node name="Icon" type="Label" parent="."]
margin_top = 3.0
margin_right = 24.0
margin_bottom = 27.0
rect_min_size = Vector2( 24, 24 )
custom_fonts/font = SubResource( 1 )
text = "󱛿"
script = ExtResource( 4 )
icon_name = "movie-open-edit"

[node name="SceneEdit" type="LineEdit" parent="."]
margin_left = 28.0
margin_right = 192.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Choose" type="Button" parent="."]
margin_left = 196.0
margin_right = 232.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "Choose from open scenes"
custom_fonts/font = SubResource( 2 )
text = "󱜋"
flat = true
script = ExtResource( 3 )
icon_name = "movie-open-settings"

[node name="Menu" type="PopupMenu" parent="Choose"]
margin_left = -5.0
margin_top = 31.0
margin_right = 187.0
margin_bottom = 178.0

[node name="Browse" type="Button" parent="."]
margin_left = 236.0
margin_right = 272.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "Browse Scene"
custom_fonts/font = SubResource( 3 )
text = "󰿎"
flat = true
script = ExtResource( 3 )
icon_name = "movie-open"

[node name="Label2" type="Label" parent="."]
margin_left = 276.0
margin_top = 8.0
margin_right = 289.0
margin_bottom = 22.0
text = "Id"

[node name="IdEdit" type="LineEdit" parent="."]
margin_left = 293.0
margin_right = 457.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Remove" type="Button" parent="."]
margin_left = 461.0
margin_right = 497.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "Remove this scene link"
custom_fonts/font = SubResource( 4 )
text = "󱜉"
flat = true
script = ExtResource( 3 )
icon_name = "movie-open-remove"

[node name="FreePos" type="Control" parent="."]
margin_left = 501.0
margin_right = 501.0
margin_bottom = 30.0

[node name="TscnDialog" type="FileDialog" parent="FreePos"]
margin_left = -881.481
margin_top = 97.5956
margin_right = -108.481
margin_bottom = 526.596
window_title = "Open a File"
resizable = true
dialog_hide_on_ok = true
mode = 0
filters = PoolStringArray( "*.tscn" )
current_dir = "res://game"
current_file = "scene_links.tres"
current_path = "res://game/scene_links.tres"

[connection signal="text_changed" from="SceneEdit" to="." method="_on_changed"]
[connection signal="pressed" from="Choose" to="." method="_on_choose"]
[connection signal="id_pressed" from="Choose/Menu" to="." method="_on_item"]
[connection signal="index_pressed" from="Choose/Menu" to="." method="_on_item"]
[connection signal="pressed" from="Browse" to="." method="_on_browse"]
[connection signal="text_changed" from="IdEdit" to="." method="_on_changed"]
[connection signal="pressed" from="Remove" to="." method="_on_remove"]
[connection signal="confirmed" from="FreePos/TscnDialog" to="." method="_on_tscn_dialog"]
